--- a/wiki/HowToInstall.wiki
+++ b/wiki/HowToInstall.wiki
@@ -2,10 +2,10 @@
 
 = Eclipse Debugger =
 
-Update site: http://chromedevtools.googlecode.com/svn/update/dev/
+*Update site* is at http://chromedevtools.googlecode.com/svn/update/dev/. Additionally "update site in zip archive" is available on "Downloads" page.
 
-Additionally, "update site in zip archive" is available on "Downloads" page.
+Install "Chromium !JavaScript Remote Debugger" feature.
 
 = SDK library alone =
 
-SDK is available from "Downloads" section as "ChromeDevTools SDK bundle". This is a tar archive of several jar-files. They have no dependencies on Eclipse.
+SDK is available from "Downloads" section as "!ChromeDevTools SDK bundle". This is a tar archive of several jar-files. They have no dependencies on Eclipse.
