Fix wording Temporary -> Temporarily
Review URL: http://codereview.chromium.org/5389001

--- a/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/actions/messages.properties
+++ b/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/actions/messages.properties
@@ -8,5 +8,5 @@ ExpressionEvaluator_SocketError=Socket error while evaluating expression
 ExpressionEvaluator_UnableToEvaluateExpression=Unable to evaluate expression
 JsBreakpointPropertiesRulerAction_ItemLabel=Breakpoint Properties...
 SynchronizeBreakpoints_JOB_TITLE=Synchronize breakpoints in {0} target(s)
-TemporaryFormatSourceAction_DELETE_FORMATTER_ACTION_NAME=Delete temporary formatted source
-TemporaryFormatSourceAction_FORMATTER_SUFFIX=\ (formatted)
+TemporarilyFormatSourceAction_DELETE_FORMATTER_ACTION_NAME=Delete temporarily formatted source
+TemporarilyFormatSourceAction_FORMATTER_SUFFIX=\ (formatted)
