Handle nicely when formatter implementation is not found
Review URL: http://codereview.chromium.org/5374003

--- a/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/actions/messages.properties
+++ b/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/actions/messages.properties
@@ -10,3 +10,4 @@ JsBreakpointPropertiesRulerAction_ItemLabel=Breakpoint Properties...
 SynchronizeBreakpoints_JOB_TITLE=Synchronize breakpoints in {0} target(s)
 TemporarilyFormatSourceAction_DELETE_FORMATTER_ACTION_NAME=Delete temporarily formatted source
 TemporarilyFormatSourceAction_FORMATTER_SUFFIX=\ (formatted)
+TemporarilyFormatSourceAction_NO_FORMATTER_DISABLED_SUFFIX=\ [disabled: no formatter implementation]
