--- a/wiki/VirtualProject.wiki
+++ b/wiki/VirtualProject.wiki
@@ -2,12 +2,16 @@
 
 = Virtual Project =
 
-An Eclipse project that is created by [Debugger] for each debug session (called launch in Eclipse) and gets deleted once the debug session is dismissed. The virtual project can be found among other regular projects. Since [Release_0_2_0 release 0.2.0] it looks as a folder icon with a small [http://www.chromium.org Chromium] logo on it. The project serves as a container for !JavaScript scripts downloaded from a remote VM. Those scripts are never saved in any files and get gone together with the project.
+An Eclipse project that is created by [Debugger] for each debug session (called _launch_ in Eclipse) and gets deleted once the debug session is dismissed. The virtual project can be found among other regular projects. Since [Release_0_2_0 release 0.2.0] its folder icon is decorated by a small [http://www.chromium.org Chromium] logo sign. The Virtual Project serves as a container for !JavaScript scripts downloaded from a remote VM. Those scripts are never saved in any files and get gone together with the virtual project.
 
 == Why do we need it? ==
 
-For a languages like C++ or Java all the source files are gathered at developer's box. Quite contrary for JavaScript case all sources are gathered in running VM (including those generated on-the-fly). That's why !JavaScript debugger first has to download them to user environment. Virtual Project is a storage where Debugger puts them to.
+For a languages like C++ or Java all the source files are gathered on developer's work directory. Quite contrary for JavaScript case all sources are gathered in running VM (including those that are generated on the fly). That's why !JavaScript debugger first has to download them from VM into Eclipse. Virtual Project is a storage where Debugger puts them to.
 
 == Virtual Project vs. local files from workspace ==
 
-The Virtual Project is useful because it contains all actual sources and you don't have to care about checking them out from somewhere else. It also contains sources that are generated on the fly and is irreplaceable in this aspect. However there are cases ... TBD
+The Virtual Project is useful because it contains all actual sources and you don't have to care about checking them out from somewhere else. It also contains sources that are generated on the fly and is irreplaceable in this aspect.
+
+Unfortunately this is not very useful for a !JavaScript developer: a developer may want to _edit_ files, not only debug them. (Actually scripts from Virtual Project _are_ editable, which is used for _live editing_ feature; but all changes will be lost with VM exiting). The more common developer set-up would be to link debug session with his workspace source files -- a feature first introduced and described in [Release_0_1_6 release 0.1.6].
+
+Note that a Virtual Project exists for each debug session whether workspace source files are configured or not.
