Edited wiki page Release_0_2_0 through web user interface. fix link

--- a/wiki/Release_0_2_0.wiki
+++ b/wiki/Release_0_2_0.wiki
@@ -2,4 +2,4 @@
 
 =Google Chrome Developer Tools for Java. Release 0.2.0.=
 
-Succeeds [Release_0.1.6 release 0.1.6].
+Succeeds [Release_0_1_6 release 0.1.6].
