--- a/wiki/Release_0_2_0.wiki
+++ b/wiki/Release_0_2_0.wiki
@@ -23,7 +23,7 @@ A !JavaScript VM may now be instructed to stop on each exception thrown. All exc
 Both types of exceptions are controlled from the _"Break on !JavaScript Exception"_ item in the launch context menu. (a _"launch"_, a.k.a. a _"debug session"_, is each of the top-level elements in the _Debug_ view).
 
 ===Basic JSDT Integration===
-The previous release expanded out of the VirtualProject premises to let you work with regular workspace source files directly. However, the default !JavaScript editor from the JSDT project could not really be used: all breakpoints set in the editor made no effect on the running VM. Now we fix this problem. The breakpoints added from the !JavaScript editor should work fine. Still, you may notice that they are slightly different from this in VirtualProjects; this shouldn't make any trouble though.
+The previous release expanded out of the VirtualProject premises to let you work with regular workspace source files directly. However, the default !JavaScript editor from the JSDT project could not really be used: all breakpoints set in the editor made no effect on the running VM. Now we fix this problem. The breakpoints added from the !JavaScript editor should work fine. Still, you may notice that they are slightly different from this in [VirtualProject]s; this shouldn't make any trouble though.
 
 Please note that this integration is deployed as a separate Eclipse feature: _"Chromium !JavaScript Debugger Bridge to JSDT"_. This feature comes together with the others, but you need to manually select it when installing/upgrading. A separate feature is needed to keep core Debugger deployable independent of a JSDT installation.
 
