--- a/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/messages.properties
+++ b/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/messages.properties
@@ -5,5 +5,7 @@
 ChromiumDebugUIPlugin_Error=Error
 ChromiumDebugUIPlugin_Warning=Warning
 ChromiumDebugUIPlugin_Info=Info
+ChromiumToggleBreakpointTargetFactory_TOGGLE_TARGET_DESCRIPTION=Breakpoints in Chrome/V8 Javascript VM
+ChromiumToggleBreakpointTargetFactory_TOGGLE_TARGET_NAME=Chrome/V8 breakpoints
 JsWatchExpressionDelegate_BadStackStructureWhileEvaluating=Bad stack structure encountered while evaluating
 JsWatchExpressionDelegate_ErrorEvaluatingExpression=Error evaluating expression
