--- a/trunk/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/liveedit/messages.properties
+++ b/trunk/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/liveedit/messages.properties
@@ -12,6 +12,7 @@ LiveEditResultDialog_SUCCESS=Script has been successfully updated.
 LiveEditResultDialog_TITLE=Live Edit Script Update Result
 PreviewLoader_FAILED_TO_GET=Failed to get preview from VM: {0}
 PreviewLoader_FAILED_TO_LOAD=Failed to load V8 preview data
+PreviewLoader_WAITING_FOR_DIFF=Waiting for diff data from remote...
 PushChangesWizard_CHANGED_SCRIPT=Changed script
 PushChangesWizard_CHOOSE_VM=Choose VM
 PushChangesWizard_CHOOSE_VM_DESCRIPTION=Select one or several V8 VMs to push changes to.
