Rename Preview label
Review URL: http://codereview.chromium.org/6532026

--- a/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/actions/pinpoint/messages.properties
+++ b/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/actions/pinpoint/messages.properties
@@ -1,7 +1,7 @@
 DialogImpl_ADD_WATCH=Add watch expression
 DialogImpl_EXPRESSION_PROMPT=Choose a property of the global object (possibly nested):
 DialogImpl_GLOBAL_MARK=<global>
-DialogImpl_PROPERTY_PREVIEW=Setting property preview:
+DialogImpl_PROPERTY_PREVIEW=Preview:
 DialogImpl_WINDOW_SUBTITLE=Saves a reference to the value in a property of the global object.
 DialogImpl_WINDOW_TITLE=Pin-Point Current Value
 LogicImpl_CONTEXT_DISMISSED=Debug context is dismissed
