--- a/wiki/Release_0_2_2.wiki
+++ b/wiki/Release_0_2_2.wiki
@@ -8,32 +8,32 @@ This release succeeds the [Release_0_2_0 release 0.2.0].
 This release introduces several new Debugger features. The SDK changes back these features up accordingly.
 
 ==String Representation==
-In some cases exploring variables might get much easier with string representation of values on display. E.g. viewing {{{“[1, 2, 3, 4, 5, 6, 7, 8]”}}} might be a much faster way to learn that the value is array of 8 numbers than expanding tree node in UI and looking at its children. Starting from this release the string representation is visible in Debugger.
+In some cases exploring variables can get much easier with their values represented as strings. A single glance at {{{“[1, 2, 3, 4, 5, 6, 7, 8]”}}} seems be a much faster way to learn that the value is an array holding 8 numbers than expanding a tree node in the UI to see its children. This release introduces the string representation of variable values in Debugger.
 
 http://chromedevtools.googlecode.com/svn/wiki/rel022-string-representation.png
 
-For all primitive values !JavaScript pre-defines their string representation. For objects it is defined by programmer (see the picture above) and usually it is used for debugging purposes. Programmer only has to add “toString” object method (much like in Java). Method “toString” is also good for debug print.
+For all primitive values, !JavaScript pre-defines their string representations. You can define a string representation for your objects by implementing the “toString()” method on their prototypes, much like in Java (see the picture above).
 
 ==Host/Port==
-It was actually one of the oldest requests – to allow connections to any remote host instead of compulsory {{{localhost}}}. Note that in practice this doesn't make a lot of changes, because both Chrome and V8 will deny non-local connections (for security reasons). Anyway this is now made possible on Debugger side:
+Users have long asked us to allow connections to any remote host instead of {{{localhost}}}, which used to be the only option. Even though both Chrome and V8 deny non-local connections for security reasons, this has been made possible on the Debugger side:
 
 http://chromedevtools.googlecode.com/svn/wiki/rel022-host-port.png
 
-Note that a realistic use-case would be to set up a small proxy on remote host, next to debuggee, and establish connection to this proxy, so that Chrome/V8 would be accessed from a local process. Some versions of Unix utility netcat could be used to set up single-connection proxy as easy as:
+To make this feature useful, you can set up a small proxy on a remote host, next to the debuggee, and establish a connection to this proxy, so that Chrome/V8 will be accessed from a local process. Some versions of the Unix {{{nc}}} (netcat) utility can be used to set up single-connection proxy as easily as:
 {{{
 nc -l <proxy_port> -c “nc localhost <port>”
 }}}
 
 ==Pin-Point Value==
-Sometimes it is important to grip a particular object and keep it for several debugger steps. E.g. you may have a watch expression "getManager()" but do you know, whether it returns the same object all the time or the objects are different? Now you can select a value in Variables or Expressions view and _pin-point_ it, which means *save it as a property of the global object*. You can do this from context menu: “Pin-Point Value...”:
+Sometimes it is important to grip a particular object and keep it for several debugger steps. For example, you may watch the {{{getManager()}}} expression, but do you know for sure if it returns the same object every time, or the objects returned are all different? Now you can select a value in the Variables or Expressions view and _pin-point_ it, which means *save it as a property of the global object*. You can do this from the context menu: “Pin-Point Value...”:
 
 http://chromedevtools.googlecode.com/svn/wiki/rel022-pinpoint-dialog.png
 
-This would save your value in a global object and you can access it at any time as “my_debug_save.manager1” (dialog window also offers adding such watch expression for you).
-Some time later you can look how this object has changed its data or compare it with what “getManager()” returns now: {{{“my_debug_save.manager1 === getManager()”}}}.
+This will save your value in the global object, and you can access it at any time as {{{my_debug_save.manager1}}} (a dialog window also lets you add similar watch expressions.)
+Some time later you can see how this object has changed its data or compare it with what {{{getManager()}}} returns now: {{{my_debug_save.manager1 === getManager()}}}.
 
 ==Breakpoint Types==
-Eclipse IDE may host several different debuggers. Such configurations often cause ambiguity when setting a breakpoint: which debugger should own a new breakpoint? Eclipse provides a UI for this case and it is now supported by !ChromeDevTools. You may explicitly choose a type of breakpoint you are about to set in the menu Run->Breakpoint Types; choose "Chrome/V8 breakpoints" in submenu.
+The Eclipse IDE can host several different debuggers. Such configurations often cause ambiguity when setting a breakpoint: which debugger should own the new breakpoint? Eclipse provides a UI for this case and it is now supported by !ChromeDevTools. You may explicitly choose a type of breakpoint you are about to set in the menu {{Run->Breakpoint Types}} (choose "Chrome/V8 breakpoints" in a submenu.)
 
 
 ==System Requirements==
